setting and getting text

--- a/src/app/counter/counter.html
+++ b/src/app/counter/counter.html
@@ -1,5 +1,5 @@
 <p>counter App</p>
 <input type="text" value="{{counterValue}}">
-<button (click)="setValue('decrement')">Decrement</button>
-<button (click)="setValue('reset')">Reset</button>
-<button (click)="setValue('increment')">Increment</button>
+<button (click)="setValue('decrement')" style="background-color: blueviolet; border-radius: 20%;">Decrement</button>
+<button (click)="setValue('reset')" style="background-color: blue;">Reset</button>
+<button (click)="setValue('increment')" style="background-color: green;">Increment</button>
