new components added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,18 @@
+<ul>
+    <li>
+        <a routerLink="login">Login</a>
+    </li>
+    <li>
+        <a routerLink="about">About</a>
+    </li>
+    <li>
+        <a routerLink="contact">Contact</a>
+    </li>
+    <li>
+        <a routerLink="counterApp">Counter App</a>
+    </li>
+</ul>
+<router-outlet></router-outlet>
 <p>Array Elements</p>
 @for (user of users; track $index) {
     {{user}}
