--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,13 +11,8 @@
     <li>
         <a routerLink="counterApp">Counter App</a>
     </li>
+    <li>
+        <a routerLink="my-code">My Code</a>
+    </li>
 </ul>
 <router-outlet></router-outlet>
-<p>Array Elements</p>
-@for (user of users; track $index) {
-    {{user}}
-    <br>
-}
-Total number of Elements are {{count}}
-<app-login></app-login>
-<app-counter></app-counter>
